@@ -1,3 +1,6 @@
+# Contains Adversary-related custom star systems
+# Toggle "isEnabled" to enable/disable individual star systems
+
 {
 	"adversary_optimal":{
 		"isEnabled":true,
@@ -169,6 +172,332 @@
 				"focus":8,
 				"name":"Hope's Aura",
 				"bandIndex":3,
+			},
+		],
+	},
+
+	# A modded, nigh-impenetrable fortress system, occupied by the Adversary
+	# 
+	# By default, requires both Unknown Skies (by Tartiflette) 
+	# and Industrial.Evolution (by SirHartley)
+	# No warranty provided; ENABLE AT YOUR OWN RISK
+	#
+	# Using this without Unknown Skies: Replace or remove anything containing "US_"
+	# Using this without Industrial.Evolution: Remove any entries containing "IndEvo_"
+	"adversary_paradiso":{
+		"isEnabled":false,
+		"setLocation":2,
+		"addCoronalHypershunt":true,
+		"addDomainCryosleeper":false,
+		"hasSystemwideNebula":true,
+		"systemBackground":"US_background133n.jpg",
+		"entities":[
+			{ # The Cooler Blue Giant
+				"entity":"star",
+				"name":"Paradiso",
+				"type":"US_star_blue_giant",
+				"radius":1100,
+				"coronaRadius":1100,
+				"flareChance":0.0,
+			},
+			{ # Best Gas Giant
+				"entity":"planet",
+				"name":"Paradiso I",
+				"type":"US_gas_giant",
+				"orbitRadius":3710,
+				"radius":250,
+				"conditions":[
+					"high_gravity",
+					"volatiles_plentiful",
+					"ruins_vast",
+					"US_floating",
+					"IndEvo_mineFieldCondition",
+					"IndEvo_ArtilleryStationCondition",
+				],
+				"marketSize":6,
+				"factionId":"adversary",
+				"aiCoreAdmin":true,
+				"industries":[
+					["population","gamma_core",,true],
+					["megaport","alpha_core",,true],
+					["waystation","gamma_core",,true],
+					["heavybatteries","alpha_core","drone_replicator",true],
+					["planetaryshield","alpha_core",,true],
+					["starfortress_mid","alpha_core",,true],
+					["highcommand","alpha_core",,true],
+					["mining","alpha_core","plasma_dynamo",true],
+					["refining","alpha_core",,true],
+					["fuelprod","alpha_core",,true],
+					["IndEvo_Artillery_railgun",,,true],
+					["IndEvo_IntArray",,"IndEvo_transmitter"],
+				],
+			},
+			{ # Best Cryovolcanic planet
+				"entity":"planet",
+				"name":"Paradiso I-A",
+				"type":"US_blue",
+				"orbitRadius":610,
+				"focus":1,
+				"radius":60,
+				"conditions":[
+					"very_cold",
+					"tectonic_activity",
+					"ore_ultrarich",
+					"rare_ore_ultrarich",
+					"volatiles_plentiful",
+					"ruins_vast",
+					"US_crash",
+					"IndEvo_mineFieldCondition",
+				],
+				"marketSize":6,
+				"factionId":"adversary",
+				"aiCoreAdmin":true,
+				"industries":[
+					["population","alpha_core","orbital_fusion_lamp",true],
+					["megaport","alpha_core","fullerene_spool",true],
+					["waystation","gamma_core",,true],
+					["heavybatteries","alpha_core","drone_replicator",true],
+					["planetaryshield","alpha_core",,true],
+					["starfortress_mid","alpha_core",,true],
+					["highcommand","alpha_core",,true],
+					["mining","alpha_core","mantle_bore",true],
+					["orbitalworks","alpha_core","pristine_nanoforge",true],
+					"IndEvo_Academy",
+					["IndEvo_IntArray",,"IndEvo_transmitter"],
+					["IndEvo_SupCom",,"IndEvo_simulator"],
+				],
+			},
+			{ # Best Toxic planet
+				"entity":"planet",
+				"name":"Paradiso I-B",
+				"type":"US_green",
+				"orbitRadius":1030,
+				"focus":1,
+				"radius":60,
+				"conditions":[
+					"toxic_atmosphere",
+					"tectonic_activity",
+					"ruins_vast",
+					"rare_ore_ultrarich",
+					"ore_ultrarich",
+					"volatiles_plentiful",
+					"organics_plentiful",
+					"US_crash",
+					"US_crystals",
+					"IndEvo_mineFieldCondition",
+				],
+				"marketSize":6,
+				"factionId":"adversary",
+				"aiCoreAdmin":true,
+				"industries":[
+					["population","alpha_core",,true],
+					["megaport","alpha_core","fullerene_spool",true],
+					["waystation","gamma_core",,true],
+					["heavybatteries","alpha_core","drone_replicator",true],
+					["planetaryshield","alpha_core",,true],
+					["starfortress_mid","alpha_core",,true],
+					["highcommand","alpha_core",,true],
+					["mining","alpha_core","mantle_bore",true],
+					"IndEvo_Academy",
+					["IndEvo_IntArray",,"IndEvo_transmitter"],
+					["IndEvo_AdInfra",,"IndEvo_log_core"],
+					["IndEvo_AdManuf","alpha_core","IndEvo_vpc_marines_hand_weapons"],
+				],
+			},
+			{ # Best Artificial planet
+				"entity":"planet",
+				"name":"Paradiso I-C",
+				"type":"US_barrenF",
+				"orbitRadius":1450,
+				"focus":1,
+				"radius":60,
+				"conditions":[
+					"no_atmosphere",
+					"very_hot",
+					"low_gravity",
+					"ore_moderate",
+					"rare_ore_rich",
+					"volatiles_trace",
+					"ruins_vast",
+					"US_tunnels",
+					"US_artificial",
+					"IndEvo_mineFieldCondition",
+					"IndEvo_ArtilleryStationCondition",
+				],
+				"specChanges":{
+					"planetColor":[255,255,255,255],
+					"atmosphereThickness":0,
+				    "texture":"US_planet_textureArtificial.jpg",
+				    "iconColor":[100,100,75,255],
+				    "typeOverride":["US_artificial","Artificial"],
+				},
+				"marketSize":6,
+				"factionId":"adversary",
+				"aiCoreAdmin":true,
+				"industries":[
+					["population","alpha_core",,true],
+					["megaport","alpha_core","fullerene_spool",true],
+					["waystation","gamma_core",,true],
+					["heavybatteries","alpha_core","drone_replicator",true],
+					["planetaryshield","alpha_core",,true],
+					["starfortress_high","alpha_core",,true],
+					["highcommand","alpha_core","cryoarithmetic_engine",true],
+					"IndEvo_Academy",
+					"IndEvo_DarkPalace",
+					["IndEvo_Artillery_mortar",,,true],
+					["IndEvo_IntArray",,"IndEvo_transmitter"],
+					["IndEvo_pirateHaven","alpha_core"],
+				],
+			},
+			{ # Best Magnetic planet
+				"entity":"planet",
+				"name":"Paradiso II",
+				"type":"US_continent",
+				"orbitRadius":5700,
+				"radius":130,
+				"conditions":[
+					"habitable",
+					"mild_climate",
+					"farmland_bountiful",
+					"ore_ultrarich",
+					"organics_plentiful",
+					"ruins_vast",
+					"solar_array",
+					"US_religious",
+					"US_magnetic",
+					"IndEvo_mineFieldCondition",
+				],
+				"specChanges":{
+					"planetColor":[255,255,255,255],
+				    "atmosphereThickness":0.1,
+				    "atmosphereThicknessMin":40,
+				    "atmosphereColor":[140,150,165,140],
+				    "texture":"US_planet_textureMagnetic.jpg",
+				    "iconColor":[220,200,145,255],
+				    "cloudTexture":"US_clouds_textureMedium.png",
+				    "cloudColor":[190,180,170,240],
+				    "cloudRotation":-2,
+				    "typeOverride":["US_magnetic","Magnetic"],
+				},
+				"marketSize":6,
+				"factionId":"adversary",
+				"aiCoreAdmin":true,
+				"industries":[
+					["population","alpha_core",,true],
+					["megaport","alpha_core","fullerene_spool",true],
+					["waystation","gamma_core",,true],
+					["heavybatteries","alpha_core","drone_replicator",true],
+					["planetaryshield","alpha_core",,true],
+					["starfortress","alpha_core",,true],
+					["highcommand","alpha_core",,true],
+					["farming","alpha_core","soil_nanites",true],
+					["lightindustry","alpha_core","biofactory_embryo",true],
+					"IndEvo_Academy",
+					"IndEvo_HullDecon",
+					["IndEvo_IntArray",,"IndEvo_transmitter"],
+				],
+			},
+			{ # Best Windy Arid planet
+				"entity":"planet",
+				"name":"Paradiso III",
+				"type":"tundra",
+				"orbitRadius":6310,
+				"radius":130,
+				"conditions":[
+					"cold",
+					"habitable",
+					"ore_ultrarich",
+					"organics_plentiful",
+					"farmland_bountiful",
+					"ruins_vast",
+					"solar_array",
+					"US_crash",
+					"US_storm",
+					"IndEvo_mineFieldCondition",
+				],
+				"specChanges":{
+					"planetColor":[255,255,255,255],
+				    "atmosphereThickness":0.1,
+				    "atmosphereThicknessMin":40,
+				    "atmosphereColor":[150,150,145,130],
+				    "texture":"US_planet_textureStorm.jpg",
+				    "iconColor":[200,180,105,255],
+				    "cloudTexture":"US_clouds_textureSwept.png",
+				    "cloudColor":[220,190,160,200],
+				    "cloudRotation":-8,
+				    "typeOverride":["US_storm","Windy Arid"],
+				},
+				"marketSize":6,
+				"factionId":"adversary",
+				"aiCoreAdmin":true,
+				"industries":[
+					["population","alpha_core","orbital_fusion_lamp",true],
+					["megaport","alpha_core","fullerene_spool",true],
+					["waystation","gamma_core",,true],
+					["heavybatteries","alpha_core","drone_replicator",true],
+					["planetaryshield","alpha_core",,true],
+					["starfortress","alpha_core",,true],
+					["highcommand","alpha_core",,true],
+					"IndEvo_Academy",
+					["IndEvo_senate",,"IndEvo_neurals"],
+					["IndEvo_IntArray",,"IndEvo_transmitter"],
+					["IndEvo_AdManuf","alpha_core","IndEvo_vpc_supply_fuel"],
+					["IndEvo_pirateHaven","alpha_core"],
+				],
+			},
+			{ # Best Heavy Industry planet
+				"entity":"planet",
+				"name":"Paradiso IV",
+				"type":"desert",
+				"orbitRadius":6920,
+				"radius":130,
+				"conditions":[
+					"hot",
+					"habitable",
+					"ore_ultrarich",
+					"rare_ore_moderate",
+					"farmland_poor",
+					"ruins_vast",
+					"solar_array",
+					"US_base",
+					#"US_virus", # The Heavy Armament bonus doesn't work with Orbital Works as of US 1.0.0rc2
+					"IndEvo_mineFieldCondition",
+					"IndEvo_ArtilleryStationCondition",
+				],
+				"marketSize":6,
+				"factionId":"adversary",
+				"aiCoreAdmin":true,
+				"industries":[
+					["population","alpha_core","orbital_fusion_lamp",true],
+					["megaport","alpha_core","fullerene_spool",true],
+					["waystation","gamma_core",,true],
+					["heavybatteries","alpha_core","drone_replicator",true],
+					["planetaryshield","alpha_core",,true],
+					["starfortress_high","alpha_core",,true],
+					["highcommand","alpha_core","cryoarithmetic_engine",true],
+					["orbitalworks","alpha_core","pristine_nanoforge",true],
+					["IndEvo_Artillery_missile",,,true],
+					["IndEvo_IntArray",,"IndEvo_transmitter"],
+					"IndEvo_HullForge",
+					["IndEvo_ScrapYard","alpha_core"],
+				],
+			},
+			{"entity":"comm_relay","focus":[1,3]},
+			{"entity":"inactive_gate","focus":[1,4],"name":"Paradiso Gate"},
+			{"entity":"jump_point","focus":[1,5],"name":"Inner System Jump-point"},
+			{"entity":"nav_buoy","focus":[5,4]},
+			{"entity":"sensor_array","focus":[5,4]},
+			{"entity":"jump_point","orbitRadius":7400,"name":"Fringe Jump-point"},
+			{ # Magnetic field for magnetic planet
+				"entity":"magnetic_field",
+				"size":80,  # Band width; always 80
+				"middleRadius":180, # Radius of focus + 50
+				"focus":5,
+				"orbitRadius":130, # Inner radius, should be same as focus' radius
+				"outerRadius":240, # Radius of focus + 110
+				"baseColor":[50,175,200,100],
+				"auroraFrequency":0.25,
+				"auroraColors":[[25,250,100,150]],
 			},
 		],
 	},
